--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!-- ============================================ -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio of Siyeon Jeon. A Product Manager & Designer.">
+    <meta property="og:title" content="Portfolio">
+    <meta property="og:description" content="Portfolio of Siyeon Jeon. A Product Manager & Designer.">
     
     <!-- 페이지 제목 (브라우저 탭에 표시됨) -->
     <title>SIYEON JEON — Product Design/Manage</title>
@@ -295,7 +298,17 @@
   <body class="bg-white dark:bg-black overflow-x-hidden selection:bg-blue-500 selection:text-white">
     <!-- React 앱이 렌더링되는 루트 요소 -->
     <div id="root"></div>
-    
+  
+    <noscript>
+      <h1>Siyeon Jeon Portfolio</h1>
+      <h2>Product Manager & Designer</h2>
+      <p>
+        I am a Product Designer & Manager specialized in Data-driven UX.
+      </p>
+    </noscript>
+
+    <script src="/main.js"></script>
+</body>
     <!-- ============================================ -->
     <!-- React 앱 진입점 -->
     <!-- ============================================ -->
